# Logger

./: Dockerfile  compose.yml  pyproject.toml
src/logger/: __init__.py
src/logger/messaging/: __init__.py  consumer.py  global_vars.py
src/logger/mongo/: __init__.py  database.py  models.py
src/logger/routers/: __init__.py  routers.py
