[build-system]
requires = [
    "setuptools >=80.0.0, <81.0.0", 
    "wheel >=0.45.0, <0.46.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "logger"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
readme = "README.md"
dependencies = [
    "fastapi==0.119.1",
    "Hypercorn==0.17.3",
    "pydantic==2.12.3",
    "motor==3.3.2",   # Cliente Asíncrono para MongoDB (FastAPI)
    "pymongo==4.6.1", # Cliente Síncrono para MongoDB (RabbitMQ Consumer)
    "coloredlogs==15.0.1",
    "chassis @ git+https://github.com/MACC-PBL1/Chassis.git",
]

[project.optional-dependencies]
dev = [
    "build==1.3.0",
]

[project.scripts]
logger = "logger:start_server"

